--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/assets/Logo.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Website Gratis | Site</title>
+  <title>Jasa pembuatan website top up game - BP Game Store</title>
+  <meta name="description"
+    content="Buat website topup gaming kamu sendiri! Bersama kami, anda mendapatkan website dalam waktu yang cepat, hemat anggaran, serta website yang sudah kami optimisasi dan tampilan layanan yang profesional!" />
+
   <style>
     html {
       scroll-behavior: smooth;
